[tool.poetry]
name = "a2c-minatar"
version = "0.1.0"
description = ""
authors = ["Sotetsu KOYAMADA <koyamada-s@sys.i.kyoto-u.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8.1"
torch = "^1.13.1"
pydantic = "^1.10.4"
omegaconf = "^2.3.0"
numpy = "^1.24.1"
wandb = "^0.13.9"
protobuf = "^4.21.12"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
blackdoc = "^0.3.8"
pytest = "^7.2.1"
isort = "^5.11.4"
jupyter = "^1.0.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
